Source/WebCore/platform/graphics/win/MediaPlayerPrivateMediaFoundation.h
@@ -59,8 +59,6 @@ public:
     void load(const String& url) override;
     void cancelLoad() override;
 
-    void prepareToPlay() override;
-
     void play() override;
     void pause() override;
 
